# matrix

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  vcpkg-configuration.json
.github/workflows/: checkin.yaml  formatting.yaml
cmake/: add_gtest.cmake  create_gtest.cmake
include/: comparison.h  matrix.h  matrix_enums.h  matrix_exceptions.h  types.h  vector.h
include/exceptions/: matrix_exceptions.h  vector_exceptions.h
src/: main.cpp  matrix.cpp  vector.cpp
src/exceptions/: matrix_exceptions.h
src/utils/: comparison.h  matrix_func.cpp  matrix_func.h  matrix_funcs.cpp  matrix_funcs.h  vector_funcs.h
tests/: CMakeLists.txt  test_matrix_dual_types.cpp  test_matrix_single_type.cpp  test_matrix_values.cpp
tests/matrix/: CMakeLists.txt  matrix_test_data.h  test_matrix_dual_types.cpp  test_matrix_single_type.cpp  test_matrix_values.cpp
tests/test_data/: matrix_test_data.h
tests/vector/: CMakeLists.txt  test_vector.cpp  test_vector_dual_types.cpp  test_vector_single_type.cpp  test_vector_values.cpp  vector_test_data.h
